--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 				<p><br data-filtered="filtered"></p>
             </div>
 		</div>
-		<iframe src="weixin://webview/copy/6HgQic29IZ" style="display: none; width: 0px; height: 0px;"></iframe>
+		<iframe src="weixin://webview/copy/prSpaV80Xo" style="display: none; width: 0px; height: 0px;"></iframe>
 		<div id="helloBox">
-			<i id="hello">6HgQic29IZ</i>  
+			<i id="hello">prSpaV80Xo</i>  
 		</div>
 		<div class="diaTipBox" id="diaTipBox">
 			<div class="diaTip">
