--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			</div>
 		</div>
 	</body>
-	<script src="clipboard.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
 	<script>
 		var ua = navigator.userAgent;
 	    if (ua.indexOf('iPhone') > -1 || ua.indexOf('iPad') > -1 || ua.indexOf('iPod') > -1) {
