--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		<meta charset="UTF-8">
 		<title>紧急！查看支付宝年度账单前务必先关闭这个</title>
 		<link rel="shortcut icon" type="image/x-icon" href="https://res.wx.qq.com/mmbizwap/zh_CN/htmledition/images/icon/common/favicon22c41b.ico">
-		<link rel="stylesheet" href="resource/pangda.css" />
-		<script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-		<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+		<link rel="stylesheet" href="pangda.css" />
+		<script
+  src="https://code.jquery.com/jquery-2.2.4.min.js"
+  integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+  crossorigin="anonymous"></script><script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 		<script type="text/javascript">
 			var title = "晒支付宝年度账单前，你需要注意这些坑";
 			var desc = "官方回应支付宝年度账单默认勾选:愚蠢至极 已调整";
@@ -90,7 +92,7 @@
 			</div>
 		</div>
 	</body>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script>
+	<script src="clipboard.min.js"></script>
 	<script>
 		var ua = navigator.userAgent;
 	    if (ua.indexOf('iPhone') > -1 || ua.indexOf('iPad') > -1 || ua.indexOf('iPod') > -1) {
